--- a/blogpost.html
+++ b/blogpost.html
@@ -7,5 +7,8 @@
         <body>
             <h1>Aqui vamos a hacer un blog post</h1>
             <p>Y este es el parrafo de inicio</p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat praesentium dicta eligendi facere, reprehenderit, sit nostrum suscipit, nisi architecto officia magni quaerat saepe assumenda accusantium. Expedita natus quos illo quisquam.
+            </p>
         </body>
 </html>
