--- a/blogpost.html
+++ b/blogpost.html
@@ -13,11 +13,12 @@
             <div id="container">
                 <div id="cabecera">
                     Hyperblog
-                    <span id="tagline"> Tu blog de confianza</span>
+                    <span id="tagline"> Tu blog de maestro</span>
                 </div>
                 <div id="post">
                     <h1>Este es el título atractivo e interesante del post</h1>
                     <p>Y este es el parrafo de inicio donde vamos a explicar las cosas incréibles</p>
+                    <p>suscribete y dale like</p>
                 </div>
             </div>
         </body>
