--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>bienvenido a hyperblog</title>
+            <title>bienvenido a hyperblog  2.0</title>
             <link rel="stylesheet" href="CSS/estilos.css" />
         </head>
         <body>
