color de fondo, logo nuevo y color header

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
             </p>
             <div id="container">
                 <div id="cabecera">
+                    <img id="logo" src="imagenes/platzi.png"/>
                     Hyperblog
                     <span id="tagline"> Tu blog de maestro</span>
                 </div>
