agregacion de div footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,9 @@
                     <p>Y este es el parrafo de inicio donde vamos a explicar las cosas incréibles</p>
                     <p>suscribete y dale like</p>
                 </div>
+                <div id="footer">
+                    <h1>Marico el que lo lea</h1>
+                </div>
             </div>
         </body>
 </html>
