gitignore y linux en el blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
                 </div>
                 <div id="post">
                     <h1>Este es el título atractivo e interesante del post</h1>
+                    <p> <img id="linux" src="imagenes/tux.jpg"> </p>
                     <p>Y este es el parrafo de inicio donde vamos a explicar las cosas incréibles</p>
                     <p>suscribete y dale like</p>
                 </div>
