cambio de tagline y color del footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
                 <div id="cabecera">
                     <img id="logo" src="imagenes/platzi.png"/>
                     Hyperblog
-                    <span id="tagline"> Tu blog de maestro</span>
+                    <span id="tagline"> Este blog es genial apa</span>
                 </div>
                 <div id="post">
                     <h1>Este es el título atractivo e interesante del post</h1>
